add ciff.cpp & caff.cpp to project

--- a/parser/ciff_caff_parser/ciff_caff_parser.vcxproj.filters
+++ b/parser/ciff_caff_parser/ciff_caff_parser.vcxproj.filters
@@ -18,6 +18,12 @@
     <ClCompile Include="ciff_caff_parser.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="caff.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ciff.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ciff_caff_parser.h">
