--- a/parser/ciff_caff_parser/ciff_caff_parser.vcxproj
+++ b/parser/ciff_caff_parser/ciff_caff_parser.vcxproj
@@ -147,6 +147,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="caff.cpp" />
+    <ClCompile Include="ciff.cpp" />
     <ClCompile Include="ciff_caff_parser.cpp" />
   </ItemGroup>
   <ItemGroup>
