--- a/CAFFStoreProject/backend/CAFFStore/pom.xml
+++ b/CAFFStoreProject/backend/CAFFStore/pom.xml
@@ -45,7 +45,16 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+		<dependency>
+			<groupId>com.devskiller.friendly-id</groupId>
+			<artifactId>friendly-id-spring-boot-starter</artifactId>
+			<version>1.1.0</version>
+		</dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
