Move bitmap related functions to own class

--- a/parser/ciff_caff_parser/ciff_caff_parser.vcxproj
+++ b/parser/ciff_caff_parser/ciff_caff_parser.vcxproj
@@ -147,11 +147,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="bitmap.cpp" />
     <ClCompile Include="caff.cpp" />
     <ClCompile Include="ciff.cpp" />
     <ClCompile Include="ciff_caff_parser.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="bitmap.h" />
     <ClInclude Include="caff.h" />
     <ClInclude Include="ciff.h" />
   </ItemGroup>
