--- a/parser/ciff_caff_parser/ciff_caff_parser.vcxproj.filters
+++ b/parser/ciff_caff_parser/ciff_caff_parser.vcxproj.filters
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="Source Files">
@@ -24,6 +24,9 @@
     <ClCompile Include="ciff.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="gif.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="bitmap.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -33,6 +36,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="caff.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="gif.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="bitmap.h">
