--- a/CAFFStoreProject/backend/CAFFStore/src/main/resources/application.properties
+++ b/CAFFStoreProject/backend/CAFFStore/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.jpa.database=mysql
 # JDBC URL of the database.
-spring.datasource.url=jdbc:mysql://localhost:3306/caffstore
+spring.datasource.url=jdbc:mysql://localhost:3306/caffstore?serverTimezone=UTC
 # Login username of the database.
 spring.datasource.username=root
 # Login password of the database.
