--- a/CAFFStoreProject/backend/CAFFStore/pom.xml
+++ b/CAFFStoreProject/backend/CAFFStore/pom.xml
@@ -54,6 +54,10 @@
             <artifactId>friendly-id-spring-boot-starter</artifactId>
             <version>1.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
