--- a/CAFFStoreProject/frontend/caff-store/package.json
+++ b/CAFFStoreProject/frontend/caff-store/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~10.2.0",
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
+    "@auth0/angular-jwt": "^5.0.1",
     "@schematics/angular": "^9.1.0",
     "ngx-file-drop": "^10.1.1",
     "rxjs": "~6.6.0",
