--- a/CAFFStoreProject/backend/CAFFStore/pom.xml
+++ b/CAFFStoreProject/backend/CAFFStore/pom.xml
@@ -72,6 +72,15 @@
             <artifactId>jjwt</artifactId>
             <version>0.5.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>28.0-jre</version>
+        </dependency>
 
     </dependencies>
 
