--- a/CAFFStoreProject/backend/CAFFStore/pom.xml
+++ b/CAFFStoreProject/backend/CAFFStore/pom.xml
@@ -81,6 +81,18 @@
             <artifactId>guava</artifactId>
             <version>28.0-jre</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
+        </dependency>
+
+
 
     </dependencies>
 
