--- a/CAFFStoreProject/backend/CAFFStore/src/main/resources/application.properties
+++ b/CAFFStoreProject/backend/CAFFStore/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 # DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.jpa.database=mysql
 # JDBC URL of the database.
-spring.datasource.url=jdbc:mysql://localhost:3306/caffstore?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://mysql:3306/caffstore?serverTimezone=UTC
 # Login username of the database.
 spring.datasource.username=root
 # Login password of the database.
 spring.datasource.password=Test1234
 # JPA (JpaBaseConfiguration, HibernateJpaAutoConfiguration)
 # DDL mode. This is actually a shortcut for the "hibernate.hbm2ddl.auto" property. Defaults to "create-drop" when using an embedded database and no schema manager was detected. Otherwise, defaults to "none".
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 # Whether to enable logging of SQL statements.
 spring.jpa.show-sql=true
 # Hibernate additional native properties to set on the JPA provider.
