--- a/CAFFStoreProject/backend/CAFFStore/src/main/resources/application.properties
+++ b/CAFFStoreProject/backend/CAFFStore/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/caffstore?serverTimezone=UTC
 # Login username of the database.
 spring.datasource.username=root
 # Login password of the database.
-spring.datasource.password=admin
+spring.datasource.password=Test1234
 # JPA (JpaBaseConfiguration, HibernateJpaAutoConfiguration)
 # DDL mode. This is actually a shortcut for the "hibernate.hbm2ddl.auto" property. Defaults to "create-drop" when using an embedded database and no schema manager was detected. Otherwise, defaults to "none".
 spring.jpa.hibernate.ddl-auto=create-drop
